--- a/Projet Piscine/monprofil.html
+++ b/Projet Piscine/monprofil.html
@@ -1,3 +1,28 @@
+<?php
+$servername = "localhost";
+$username = "root";
+$password = "root";
+$dbname = "Web";
+$mail = isset($_POST['mail'])?
+$_POST['mail']:""; 
+$nom = isset($_POST['nom'])?
+$_POST['nom']:""; 
+$prenom= isset($_POST['prenom'])?
+$_POST['prenom']:"";
+$pseudo= isset($_POST['pseudo'])?
+$_POST['pseudo']:"";
+$mdp = isset($_POST['mdp'])?
+$_POST['mdp']:""; 
+$confirm = isset($_POST['confirm'])?
+$_POST['confirm']:""; 
+$error = ""; 
+
+// Create connection
+$conn = mysqli_connect($servername, $username, $password, $dbname);
+// Check connection
+if (!$conn) {
+    die("Connection failed: " . mysqli_connect_error());
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,7 +66,7 @@
   <div class="row">
   <div class="col-sm-6"> 
 <p>
-      E-mail <input type="text" name="mail" /><br><br>
+      E-mail <?php echo " SELECT mail FROM utilisateur WHERE mail = $mail";?>
       Nom <input type="text" name="name"/> <br><br> 
       Prenom <input type="text" name="prenom"/> <br><br>
       Date de naissance <input type = "text" name="anniv"><br><br>
